# slae_course

./: .gitignore  CMakeLists.txt  main.cpp
1st_hw/: main.cpp  numbers_column.cpp  numbers_column.h  progonka.cpp  progonka.h  threediagonal_matrix.cpp  threediagonal_matrix.h
CSR_Matrix/: CMakeLists.txt  csr_matrix.cpp  csr_matrix.h
GTest/: CMakeLists.txt  test1.cpp  test_for_csr_matrix.cpp  test_for_fast_mpi.cpp  test_for_iteration_methods.cpp  test_for_iterative_methodes.cpp  test_for_threediagonal_matrix.cpp  test_for_vector.cpp
GTest/KR2/: gz_symmetric_data.txt  kr2_1.cpp  maker_plot_fastMPI.py  maker_plot_symmetric_gz.py
GTest/KR2/1_task/: MPI_fast_data.txt  gz_symmetric_data.txt  kr2_1.cpp  maker_plot_fastMPI.py  maker_plot_symmetric_gz.py
GTest/KR2/2_task/: CG.txt  MPI_fast.txt  kr2_2.cpp  kr2_2_MPI1.txt  kr2_2_MPI2.txt  maker_plot_for_2_task.py  steepest_descent.txt
GTest/lib/docs/: advanced.md  gmock_cheat_sheet.md  gmock_cook_book.md  gmock_for_dummies.md  pkgconfig.md  quickstart-cmake.md
GTest/lib/docs/reference/: testing.md
GTest/lib/googlemock/include/gmock/: gmock-actions.h  gmock-function-mocker.h  gmock-matchers.h  gmock-spec-builders.h
GTest/lib/googlemock/include/gmock/internal/: gmock-pp.h
GTest/lib/googlemock/src/: gmock-matchers.cc
GTest/lib/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-internal-utils_test.cc  gmock-matchers-arithmetic_test.cc  gmock-matchers-comparisons_test.cc  gmock-matchers-containers_test.cc  gmock-matchers-misc_test.cc  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-pp-string_test.cc  gmock-spec-builders_test.cc  gmock_stress_test.cc
GTest/lib/googletest/cmake/: internal_utils.cmake
GTest/lib/googletest/include/gtest/: gtest-assertion-result.h  gtest-death-test.h  gtest-param-test.h  gtest.h
GTest/lib/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-port.h
GTest/lib/googletest/samples/: sample1.cc  sample1_unittest.cc  sample2_unittest.cc
GTest/lib/googletest/src/: gtest-death-test.cc  gtest-port.cc  gtest-printers.cc  gtest.cc
GTest/lib/googletest/test/: googletest-failfast-unittest.py  googletest-filter-unittest.py  googletest-json-output-unittest.py  googletest-output-test.py  googletest-output-test_.cc  googletest-printers-test.cc  googletest-shuffle-test.py  gtest_no_test_unittest.cc  gtest_pred_impl_unittest.cc  gtest_unittest.cc  gtest_xml_output_unittest.py  gtest_xml_output_unittest_.cc
KR1/: CMakeLists.txt
KR1/exercise3/: MPI3.txt  ex3.cpp  maker_plot.py
KR1/exercise4/: GZ.txt  MPI.txt  ex4.cpp  jacobi.txt  maker_png.py
ThreeDiagonalMatrix/: CMakeLists.txt  numbers_column.cpp  numbers_column.h  progonka.cpp  progonka.h  threediagonal_matrix.cpp  threediagonal_matrix.h
bild/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
bild/GTest/: CTestTestfile.cmake  Makefile  (+1 more)
solving/: CMakeLists.txt
(+52 files in other folders)
